--- a/sections/styles/styles.html
+++ b/sections/styles/styles.html
@@ -74,7 +74,7 @@
     grid-row: 1;
     width: 235px;
     height: 195px;
-    transform: translate(-325px, 170px);
+    transform: translate(-380px, 170px);
   }
 
   .styles-card:nth-child(1).animate-in {
@@ -85,13 +85,13 @@
   @keyframes fadeInUp1 {
     0% {
       opacity: 0;
-      transform: translate(-325px, 240px);
+      transform: translate(-380px, 240px);
       /* 从下方70px开始 (170 + 70) */
     }
 
     100% {
       opacity: 1;
-      transform: translate(-325px, 170px);
+      transform: translate(-380px, 170px);
       /* 最终位置 */
     }
   }
@@ -102,7 +102,7 @@
     grid-row: 1;
     width: 235px;
     height: 195px;
-    transform: translate(-380px, 170px);
+    transform: translate(-505px, 170px);
   }
 
   .styles-card:nth-child(2).animate-in {
@@ -113,13 +113,13 @@
   @keyframes fadeInUp2 {
     0% {
       opacity: 0;
-      transform: translate(-380px, 240px);
+      transform: translate(-505px, 240px);
     }
 
     /* 170 + 70 */
     100% {
       opacity: 1;
-      transform: translate(-380px, 170px);
+      transform: translate(-505px, 170px);
     }
   }
 
@@ -129,7 +129,7 @@
     grid-row: 2;
     width: 220px;
     height: 290px;
-    transform: translate(-335px, 70px);
+    transform: translate(-410px, 70px);
   }
 
   .styles-card:nth-child(3).animate-in {
@@ -140,13 +140,13 @@
   @keyframes fadeInUp3 {
     0% {
       opacity: 0;
-      transform: translate(-335px, 140px);
+      transform: translate(-410px, 140px);
     }
 
     /* 70 + 70 */
     100% {
       opacity: 1;
-      transform: translate(-335px, 70px);
+      transform: translate(-410px, 70px);
     }
   }
 
@@ -157,7 +157,7 @@
     width: 367px;
     height: 315px;
     z-index: 2;
-    transform: translate(-325px, 170px);
+    transform: translate(-400px, 170px);
   }
 
   .styles-card:nth-child(4).animate-in {
@@ -168,13 +168,13 @@
   @keyframes fadeInUp4 {
     0% {
       opacity: 0;
-      transform: translate(-325px, 240px);
+      transform: translate(-400px, 240px);
     }
 
     /* 170 + 70 */
     100% {
       opacity: 1;
-      transform: translate(-325px, 170px);
+      transform: translate(-400px, 170px);
     }
   }
 
@@ -185,7 +185,7 @@
     width: 240px;
     height: 395px;
     z-index: 3;
-    transform: translate(-80px, 170px);
+    transform: translate(-205px, 170px);
   }
 
   .styles-card:nth-child(5).animate-in {
@@ -196,13 +196,13 @@
   @keyframes fadeInUp5 {
     0% {
       opacity: 0;
-      transform: translate(-80px, 240px);
+      transform: translate(-205px, 240px);
     }
 
     /* 170 + 70 */
     100% {
       opacity: 1;
-      transform: translate(-80px, 170px);
+      transform: translate(-205px, 170px);
     }
   }
 
@@ -210,9 +210,9 @@
   .styles-card:nth-child(6) {
     grid-column: 3 / 5;
     grid-row: 3;
-    width: 295px;
+    width: 367px;
     height: 400px;
-    transform: translate(-250px, 170px);
+    transform: translate(-400px, 170px);
   }
 
   .styles-card:nth-child(6).animate-in {
@@ -223,13 +223,40 @@
   @keyframes fadeInUp6 {
     0% {
       opacity: 0;
-      transform: translate(-250px, 240px);
+      transform: translate(-400px, 240px);
     }
 
     /* 170 + 70 */
     100% {
       opacity: 1;
-      transform: translate(-250px, 170px);
+      transform: translate(-400px, 170px);
+    }
+  }
+
+  /* 卡片 7：左下角 */
+  .styles-card:nth-child(7) {
+    grid-column: 1 / 3;
+    grid-row: 3;
+    width: 220px;
+    height: 486px;
+    transform: translate(-410px, 60px);
+  }
+
+  .styles-card:nth-child(7).animate-in {
+    animation: fadeInUp7 0.8s ease forwards;
+    animation-delay: 0.9s;
+  }
+
+  @keyframes fadeInUp7 {
+    0% {
+      opacity: 0;
+      transform: translate(-410px, 130px);
+    }
+
+    /* 60 + 70 */
+    100% {
+      opacity: 1;
+      transform: translate(-410px, 60px);
     }
   }
 
@@ -422,13 +449,9 @@
       order: 1;
     }
 
-    /* 平板端：保持交错布局 */
+    /* 平板端：隐藏左侧卡片 */
     .styles-gallery {
-      grid-template-columns: repeat(3, 1fr);
-      gap: var(--spacing-sm);
-      order: 2;
-      padding: var(--spacing-md);
-      transform: rotate(35deg);
+      display: none;
     }
 
     .styles-title {
@@ -455,79 +478,9 @@
       /* 所有内容居中 */
     }
 
-    /* 移动端：简化为2列网格，保留旋转效果 */
+    /* 移动端：隐藏左侧卡片 */
     .styles-gallery {
-      grid-template-columns: repeat(2, 1fr);
-      gap: var(--spacing-sm);
-      transform: rotate(35deg);
-      padding: var(--spacing-md);
-      max-width: 500px;
-      /* 限制最大宽度 */
-      margin: 0 auto;
-      /* 居中 */
-    }
-
-    /* 移动端：重置交错布局，改为简单的2列排列 */
-    .styles-card:nth-child(1) {
-      grid-column: 1 / 2;
-      grid-row: 1;
-      transform: translate(0, 0);
-      /* 重置transform */
-      width: 100%;
-      height: auto;
-    }
-
-    .styles-card:nth-child(2) {
-      grid-column: 2 / 3;
-      grid-row: 1;
-      transform: translate(0, 0);
-      width: 100%;
-      height: auto;
-    }
-
-    .styles-card:nth-child(3) {
-      grid-column: 1 / 2;
-      grid-row: 2;
-      transform: translate(0, 0);
-      width: 100%;
-      height: auto;
-    }
-
-    .styles-card:nth-child(4) {
-      grid-column: 2 / 3;
-      grid-row: 2;
-      transform: translate(0, 0);
-      width: 100%;
-      height: auto;
-    }
-
-    .styles-card:nth-child(5) {
-      grid-column: 1 / 2;
-      grid-row: 3;
-      transform: translate(0, 0);
-      width: 100%;
-      height: auto;
-    }
-
-    .styles-card:nth-child(6) {
-      grid-column: 2 / 3;
-      grid-row: 3;
-      transform: translate(0, 0);
-      width: 100%;
-      height: auto;
-    }
-
-    /* 移除单个卡片的动画，但保持显示 */
-    .styles-card {
-      opacity: 1 !important;
-      /* 强制显示卡片 */
-      animation: none !important;
-      /* 移除动画 */
-    }
-
-    .styles-card.animate-in {
-      animation: none;
-      opacity: 1;
+      display: none;
     }
 
     /* 右侧内容区域 */
@@ -612,15 +565,9 @@
       font-size: 0.9rem;
     }
 
+    /* 小屏移动端：隐藏左侧卡片 */
     .styles-gallery {
-      gap: 0.5rem;
-      padding: var(--spacing-sm);
-      max-width: 400px;
-    }
-
-    .styles-card {
-      opacity: 1 !important;
-      /* 确保卡片可见 */
+      display: none;
     }
 
     .styles-features {
@@ -695,6 +642,12 @@
         <img src="assets/styles/images/styles-image-06.png" alt="Style 6" loading="lazy">
         <video muted loop preload="none">
           <source src="assets/styles/videos/styles-video-06.mp4" type="video/mp4">
+        </video>
+      </div>
+      <div class="styles-card" data-hover-video>
+        <img src="assets/styles/images/styles-image-07.png" alt="Style 7" loading="lazy">
+        <video muted loop preload="none">
+          <source src="assets/styles/videos/styles-video-07.mp4" type="video/mp4">
         </video>
       </div>
     </div>
