--- a/sections/styles/styles.html
+++ b/sections/styles/styles.html
@@ -74,7 +74,7 @@
     grid-row: 1;
     width: 235px;
     height: 195px;
-    transform: translate(-325px, 170px);
+    transform: translate(-380px, 170px);
   }
 
   .styles-card:nth-child(1).animate-in {
@@ -85,13 +85,13 @@
   @keyframes fadeInUp1 {
     0% {
       opacity: 0;
-      transform: translate(-325px, 240px);
+      transform: translate(-380px, 240px);
       /* 从下方70px开始 (170 + 70) */
     }
 
     100% {
       opacity: 1;
-      transform: translate(-325px, 170px);
+      transform: translate(-380px, 170px);
       /* 最终位置 */
     }
   }
@@ -102,7 +102,7 @@
     grid-row: 1;
     width: 235px;
     height: 195px;
-    transform: translate(-380px, 170px);
+    transform: translate(-505px, 170px);
   }
 
   .styles-card:nth-child(2).animate-in {
@@ -113,13 +113,13 @@
   @keyframes fadeInUp2 {
     0% {
       opacity: 0;
-      transform: translate(-380px, 240px);
+      transform: translate(-505px, 240px);
     }
 
     /* 170 + 70 */
     100% {
       opacity: 1;
-      transform: translate(-380px, 170px);
+      transform: translate(-505px, 170px);
     }
   }
 
@@ -129,7 +129,7 @@
     grid-row: 2;
     width: 220px;
     height: 290px;
-    transform: translate(-335px, 70px);
+    transform: translate(-410px, 70px);
   }
 
   .styles-card:nth-child(3).animate-in {
@@ -140,13 +140,13 @@
   @keyframes fadeInUp3 {
     0% {
       opacity: 0;
-      transform: translate(-335px, 140px);
+      transform: translate(-410px, 140px);
     }
 
     /* 70 + 70 */
     100% {
       opacity: 1;
-      transform: translate(-335px, 70px);
+      transform: translate(-410px, 70px);
     }
   }
 
@@ -157,7 +157,7 @@
     width: 367px;
     height: 315px;
     z-index: 2;
-    transform: translate(-325px, 170px);
+    transform: translate(-400px, 170px);
   }
 
   .styles-card:nth-child(4).animate-in {
@@ -168,13 +168,13 @@
   @keyframes fadeInUp4 {
     0% {
       opacity: 0;
-      transform: translate(-325px, 240px);
+      transform: translate(-400px, 240px);
     }
 
     /* 170 + 70 */
     100% {
       opacity: 1;
-      transform: translate(-325px, 170px);
+      transform: translate(-400px, 170px);
     }
   }
 
@@ -185,7 +185,7 @@
     width: 240px;
     height: 395px;
     z-index: 3;
-    transform: translate(-80px, 170px);
+    transform: translate(-205px, 170px);
   }
 
   .styles-card:nth-child(5).animate-in {
@@ -196,13 +196,13 @@
   @keyframes fadeInUp5 {
     0% {
       opacity: 0;
-      transform: translate(-80px, 240px);
+      transform: translate(-205px, 240px);
     }
 
     /* 170 + 70 */
     100% {
       opacity: 1;
-      transform: translate(-80px, 170px);
+      transform: translate(-205px, 170px);
     }
   }
 
@@ -210,9 +210,9 @@
   .styles-card:nth-child(6) {
     grid-column: 3 / 5;
     grid-row: 3;
-    width: 295px;
+    width: 367px;
     height: 400px;
-    transform: translate(-250px, 170px);
+    transform: translate(-400px, 170px);
   }
 
   .styles-card:nth-child(6).animate-in {
@@ -223,13 +223,40 @@
   @keyframes fadeInUp6 {
     0% {
       opacity: 0;
-      transform: translate(-250px, 240px);
+      transform: translate(-400px, 240px);
     }
 
     /* 170 + 70 */
     100% {
       opacity: 1;
-      transform: translate(-250px, 170px);
+      transform: translate(-400px, 170px);
+    }
+  }
+
+  /* 卡片 7：左下角 */
+  .styles-card:nth-child(7) {
+    grid-column: 1 / 3;
+    grid-row: 3;
+    width: 220px;
+    height: 486px;
+    transform: translate(-410px, 60px);
+  }
+
+  .styles-card:nth-child(7).animate-in {
+    animation: fadeInUp7 0.8s ease forwards;
+    animation-delay: 0.9s;
+  }
+
+  @keyframes fadeInUp7 {
+    0% {
+      opacity: 0;
+      transform: translate(-410px, 130px);
+    }
+
+    /* 60 + 70 */
+    100% {
+      opacity: 1;
+      transform: translate(-410px, 60px);
     }
   }
 
@@ -615,6 +642,12 @@
         <img src="assets/styles/images/styles-image-06.png" alt="Style 6" loading="lazy">
         <video muted loop preload="none">
           <source src="assets/styles/videos/styles-video-06.mp4" type="video/mp4">
+        </video>
+      </div>
+      <div class="styles-card" data-hover-video>
+        <img src="assets/styles/images/styles-image-07.png" alt="Style 7" loading="lazy">
+        <video muted loop preload="none">
+          <source src="assets/styles/videos/styles-video-07.mp4" type="video/mp4">
         </video>
       </div>
     </div>
