workflow_cpm模块区分注释修改

--- a/sections/workflow_cpm/workflow_cpm.html
+++ b/sections/workflow_cpm/workflow_cpm.html
@@ -1,5 +1,4 @@
-<!-- ===== WORKFLOW_CMPS SECTION ===== -->
-<!-- ===== WORKFLOW_CMPS 模块 ===== -->
+<!-- ===== WORKFLOW_CPM 模块 ===== -->
 <style>
   /* Workflow CMPS Section Styles */
   .workflow-cmps {
